MAR-86, add getNoticeById endpoint, upd swagger
